Week02/login_form/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;   
}

body {
    background-color: #f4f4f4;
    font-family: Verdana, Geneva, Tahoma, sans-serif
}

nav {
    background-color: black;
    margin: 5px;
    border-radius: 5px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px;
}
#navbtn {
    align-items: center;
    margin-top: 0;
}

#logo {
    color: #ffffff;
}

#form_div {
    width: 500px;
    padding: 50px 90px 50px 90px;
    margin: 50px auto auto auto;
    border-radius: 10px;
    background-color: gray;
    box-shadow: inset 0 0 5px black;
}

.input_divs {
    padding: 20px;
    margin-top: 10px;
    border-radius: 5px;
    background-color: #f4f4f4;
    box-shadow: black;
    font-weight: bold;
}

.input_style {
    padding: 3px;
    width: 250px;
    border-radius: 5px;
    background-color: rgb(224, 220, 220);
}

button {
    margin-top: 30px;
    padding: 5px 10px 5px 10px;
    border-radius: 5px;
    font-weight: bold;
    background-color: #ffffff;
}

footer {
    background-color: black;
    color: #ffffff;
    height: 100px;
    padding: 20px;
    margin-top: 50px;
}

